--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.10",
+    "framer-motion": "^12.5.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
-    "motion": "^12.4.10",
+    "motion": "^12.5.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
@@ -52,8 +55,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
+    "mini-svg-data-uri": "^1.4.4",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.14"
   }
 }
